@@ -29,6 +29,14 @@ configurations.configureEach {
     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 }
 
+tasks.named('bootRun') {
+    jvmArgs = [
+            '-Djdk.attach.allowAttachSelf=true',
+            '--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED'
+    ]
+}
+
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -48,12 +56,15 @@ dependencies {
 
     compileOnly 'org.jetbrains:annotations:24.0.0'
 
+    implementation 'net.bytebuddy:byte-buddy-agent:1.17.5'
+    implementation 'net.bytebuddy:byte-buddy:1.17.5'
     //implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:12.0.0'
     implementation 'org.apache.ftpserver:ftpserver-core:1.2.0'
     implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'
     implementation 'io.netty:netty-all:4.1.109.Final'
     implementation "com.auth0:java-jwt:4.4.0"
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.12'
+    implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.12'
     implementation 'com.mysql:mysql-connector-j:8.3.0'
     implementation 'net.coobird:thumbnailator:0.4.20'
 
